--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.4",
-    "cors": "^2.8.5"
+    "@azure/storage-blob": "^12.27.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "multer": "^1.4.4"
   }
 }
