--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "matricula-backend",
   "version": "1.0.0",
-  "description": "Backend simples para matrícula online",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@azure/storage-blob": "^12.27.0",
+    "express": "^4.18.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "multer": "^1.4.4"
+    "mssql": "^9.0.0",
+    "@azure/storage-blob": "^12.0.0",
+    "dotenv": "^16.0.0",
+    "multer": "^1.4.5"
   }
 }
